<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="multiple">*</string>
    <string name="divide">/</string>
    <string name="number1">Number 1</string>
    <string name="number2">Number 2</string>
    <string name="answer">Answer</string>
    <string name="menu_settings">Settings</string>

</resources>